Fix overflow of the document
The scroll bars were showing, even though the window was large enough

--- a/style.css
+++ b/style.css
@@ -14,7 +14,6 @@ body {
   touch-action: none;
   /*display: flex;*/
   flex-direction: column;
-  height: 100vh;
   justify-content: center;
   align-items: center;
   position: relative;
